--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -33,26 +33,26 @@ WEBSERVICE_NAME=${PROJECT_NAME}Service
 #  CSM_PROJECT_NAME: used as a prefix when creating the:
 #		1) CSM security configuration file name
 #
-#  INSTANCE_LEVEL_SECURITY: used to enable/disable CSM instance level security.
+#  ENABLE_INSTANCE_LEVEL_SECURITY: used to enable/disable CSM instance level security.
 #  Only relevant if SECURITY_ENABLED property is set to 'true'.
 #
-#  ATTRIBUTE_LEVEL_SECURITY: used to enable/disable CSM attribute level
+#  ENABLE_ATTRIBUTE_LEVEL_SECURITY: used to enable/disable CSM attribute level
 #  security.  Only relevant if SECURITY_ENABLED property is set to 'true'.
 #
 #  CACHE_PROTECTION_ELEMENTS: indicates whether or not CSM Protection Elements
 #  should be cached
 #
 ##################################################################################
-SECURITY_ENABLED=false
+ENABLE_SECURITY=false
 CSM_PROJECT_NAME=sdk
-INSTANCE_LEVEL_SECURITY=false
-ATTRIBUTE_LEVEL_SECURITY=false
+ENABLE_INSTANCE_LEVEL_SECURITY=false
+ENABLE_ATTRIBUTE_LEVEL_SECURITY=false
 CACHE_PROTECTION_ELEMENTS=false
 
 ##################################################################################
 #  WRITABLE API PROPERTIES
 # 
-#  ENABLE_WRITABLE_API_EXTENSION: if set to "yes", will change the
+#  ENABLE_WRITABLE_API_EXTENSION: if set to "true" or "yes", will change the
 #  service interface and corresponding implementation for the Writable API
 #
 #  DATABASE_TYPE: A suffix appended to certain tag value keys (e.g., 
@@ -72,7 +72,7 @@ CACHE_PROTECTION_ELEMENTS=false
 #  domain object attribute.
 #  
 ##################################################################################
-ENABLE_WRITABLE_API_EXTENSION=no
+ENABLE_WRITABLE_API_EXTENSION=false
 DATABASE_TYPE=oracle
 IDENTITY_GENERATOR_TAG=<generator class="assigned"/>
 CADSR_CONNECTION_URL=http://cadsrapi.nci.nih.gov/cadsrapi40
@@ -124,16 +124,16 @@ EXCLUDE_NAME=
 ##################################################################################
 #  DATABASE CONNECTION PROPERTIES
 # 
-#  USE_JNDI_BASED_CONNECTION:  If set to "yes" then DB_JNDI_URL is used to obtain  
-#  the connection and get data.  If set to "no" then DB_DRIVER, DB_CONNECTION_URL, 
-#  DB_USERNAME and DB_PASSWORD are used instead to initialize the connection and 
-#  get data.
+#  USE_JNDI_BASED_CONNECTION:  If set to "true" or "yes", DB_JNDI_URL is used to   
+#  obtain the connection and get data.  If set to "no" then DB_DRIVER,  
+#  DB_CONNECTION_URL, DB_USERNAME and DB_PASSWORD are used instead to initialize 
+#  the connection and get data.
 #
-#  DB_DIALECT: used by the Hibernate to prepare the database specific queries
+#  DB_DIALECT: used by Hibernate to prepare database specific queries
 #
-#  CACHE_PATH: used by the EHCache to store its cache files on disk
+#  CACHE_PATH: used by EHCache to store its cache files on disk
 ##################################################################################
-USE_JNDI_BASED_CONNECTION=no
+USE_JNDI_BASED_CONNECTION=false
 DB_JNDI_URL=java:/SDK
 
 DB_CONNECTION_URL=
@@ -146,17 +146,17 @@ DB_DIALECT=org.hibernate.dialect.OracleDialect
 ##################################################################################
 #  SECURITY DATABASE CONNECTION PROPERTIES
 #
-#  USE_JNDI_BASED_CONNECTION:  If set to "yes" then DB_JNDI_URL is used to obtain  
-#  the connection and get data.  If set to "no" then DB_DRIVER, DB_CONNECTION_URL, 
-#  DB_USERNAME and DB_PASSWORD are used instead to initialize the connection and 
-#  get data.
+#  USE_JNDI_BASED_CONNECTION:  If set to "true" or "yes" then DB_JNDI_URL is used  
+#  to obtain  the connection and get data.  If set to "no" then DB_DRIVER,  
+#  DB_CONNECTION_URL, DB_USERNAME and DB_PASSWORD are used instead to initialize  
+#  the connection and get data.
 #
 #  CSM_DB_DIALECT: used by the Hibernate to prepare the database specific queries.
 #
 #  If you are using instance level security then the CSM tables are required to be 
 #  present in the same schema the domain object resides in
 ##################################################################################
-CSM_USE_JNDI_BASED_CONNECTION=no
+CSM_USE_JNDI_BASED_CONNECTION=false
 CSM_DB_JNDI_URL=java:/SDK
 
 CSM_DB_CONNECTION_URL=
