--- a/SDK4/junit/build.xml
+++ b/SDK4/junit/build.xml
@@ -8,6 +8,7 @@
 
 	<property name="sdk.home" value=".." />
 
+	<property file="${sdk.home}/local.properties" />
 	<property file="${sdk.home}/conf/deploy.properties" />
 	<property file="${sdk.home}/build.properties" prefix="sdk"/>
 	<property file="build.properties" />
@@ -24,6 +25,7 @@
 	<property name="report.dir.security-thick-client" value="${report.dir}/security-client/thick-client" />
 	<property name="report.dir.remote-security-client" value="${report.dir}/security-client/remote-client" />
 	<property name="report.dir.hbm-mapping-client" value="${report.dir}/hbm-mapping-client" />
+	<property name="report.dir.thickclient-writableapi" value="${report.dir}/writable-api" />
 	<property name="report.dir.codegen" value="${report.dir}/codegen" />
 
 	<!--***********************************************************************
@@ -412,6 +414,19 @@
 		<SDKCompileJUnit compileClasspath="hbm-client-cp" includePattern="**/*HBM*.java" />
 		<SDKRunJUnitSuite junitClasspath="hbm-client-cp" junitOutputDir="${report.dir.hbm-mapping-client}" junitSuite="test.gov.nih.nci.cacoresdk.SDKHBMMappingTestSuite" />
 		<SDKGenerateReport junitOutputDir="${report.dir.hbm-mapping-client}" />
+	</target>
+
+	<!-- ************************************************************************************************-->
+	<!--                                Run JUnit for WritableApi             -->
+	<!-- ************************************************************************************************-->
+
+	<target name="runWritableApiClientQuickTest" depends="clean-classes,createDir,runWritableApiClientQuickJUnit,stop" description="Run JUnit for Writable Api Mapping Client (Quick Mode)" />
+
+	<target name="runWritableApiClientQuickJUnit">
+
+		<SDKCompileJUnit compileClasspath="thick-client-cp" includePattern="**/*WritableApi*.java" />
+		<SDKRunJUnitSuite junitClasspath="thick-client-cp" junitOutputDir="${report.dir.thickclient-writableapi}" junitSuite="test.gov.nih.nci.cacoresdk.SDKWritableApiTestSuite" />
+		<SDKGenerateReport junitOutputDir="${report.dir.thickclient-writableapi}" />
 	</target>
 
 	<!-- ************************************************************************************************-->
