CSM/CLM integration changes
SVN-Revision: 2073

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -58,8 +58,11 @@ package.system.dir=${package.dir}/webapp
 bean.file=${PROJECT_NAME}-beans.jar
 orm.file=${PROJECT_NAME}-orm.jar
 
+csm.ehcache.file=csm.ehcache.xml
 csm.security.config.original.file=csm.new.hibernate.cfg.xml
 csm.security.config.file=${CSM_PROJECT_NAME}.${csm.security.config.original.file}
+
+clm.object.state.logger.config=ObjectStateLoggerConfig.xml
 
 application.config.file=application-config.xml
 application.config.security.file=application-config-security.xml
