--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -71,11 +71,14 @@ CACHE_PROTECTION_ELEMENTS=false
 #  annotations containing caDSR Permissible Value enumeration(s) for a given 
 #  domain object attribute.
 #  
+#  ENABLE_COMMON_LOGGING_MODULE:  if "yes" or "true", will enable the Common
+#  Logging Module (CLM).  Only valid if the Writable API extension is enabled.
 ##################################################################################
 ENABLE_WRITABLE_API_EXTENSION=false
 DATABASE_TYPE=oracle
 IDENTITY_GENERATOR_TAG=<generator class="assigned"/>
 CADSR_CONNECTION_URL=http://cadsrapi.nci.nih.gov/cadsrapi40
+ENABLE_COMMON_LOGGING_MODULE=true
 
 ################################################################################## 
 #  APPLICATION SERVER PROPERTIES
