Added CLM properties
SVN-Revision: 2077

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -159,15 +159,24 @@ DB_DIALECT=org.hibernate.dialect.OracleDialect
 #  If you are using instance level security then the CSM tables are required to be 
 #  present in the same schema the domain object resides in
 ##################################################################################
-CSM_USE_JNDI_BASED_CONNECTION=false
-CSM_DB_JNDI_URL=java:/SDK
+CSM_USE_JNDI_BASED_CONNECTION=${USE_JNDI_BASED_CONNECTION}
+CSM_DB_JNDI_URL=${DB_JNDI_URL}
 
-CSM_DB_CONNECTION_URL=
-CSM_DB_USERNAME=
-CSM_DB_PASSWORD=
-CSM_DB_DRIVER=oracle.jdbc.driver.OracleDriver
+CSM_DB_CONNECTION_URL=${DB_CONNECTION_URL}
+CSM_DB_USERNAME=${DB_USERNAME}
+CSM_DB_PASSWORD=${DB_PASSWORD}
+CSM_DB_DRIVER=${DB_DRIVER}
 
-CSM_DB_DIALECT=org.hibernate.dialect.OracleDialect
+CSM_DB_DIALECT=${DB_DIALECT}
+
+##################################################################################
+#  LOGGING DATABASE CONNECTION PROPERTIES
+#
+##################################################################################
+CLM_DB_CONNECTION_URL=${DB_CONNECTION_URL}
+CLM_DB_USERNAME=${DB_USERNAME}
+CLM_DB_PASSWORD=${DB_PASSWORD}
+CLM_DB_DRIVER=${DB_DRIVER}
 
 ##################################################################################
 ##################################################################################
