--- a/SDK4/build.xml
+++ b/SDK4/build.xml
@@ -156,7 +156,11 @@
 	<condition property="server-exclude-list" value="log4j*.jar" else="">
 		<equals arg1="${SERVER_TYPE}" arg2="jboss" casesensitive="false" trim="true" />
 	</condition>
-	
+
+	<condition property="server-exclude-classes-list" value="**/log4j*.*" else="">
+		<equals arg1="${SERVER_TYPE}" arg2="jboss" casesensitive="false" trim="true" />
+	</condition>
+
 	<condition property="WRITABLE_API_EXTENSION_ENABLED" value="true" else="false">
 		<or>
 			<equals arg1="${ENABLE_WRITABLE_API_EXTENSION}" arg2="true" casesensitive="false" trim="true" />
@@ -381,7 +385,10 @@
 			<replacefilter token="@ATTRIBUTE_LEVEL_SECURITY_END@" value="${ATTRIBUTE_LEVEL_SECURITY_END}" />
 			<replacefilter token="@ENABLE_CLM_LOGGER_CFG_GENERATION_START@" value="${ENABLE_CLM_LOGGER_CFG_GENERATION_START}" />
 			<replacefilter token="@ENABLE_CLM_LOGGER_CFG_GENERATION_END@" value="${ENABLE_CLM_LOGGER_CFG_GENERATION_END}" />
-
+			<replacefilter token="@CLM_DB_DRIVER@" value="${CLM_DB_DRIVER}" />	
+			<replacefilter token="@CLM_DB_CONNECTION_URL@" value="${CLM_DB_CONNECTION_URL}" />	
+			<replacefilter token="@CLM_DB_USERNAME@" value="${CLM_DB_USERNAME}" />	
+			<replacefilter token="@CLM_DB_PASSWORD@" value="${CLM_DB_PASSWORD}" />	
 		</replace>
 		<copy todir="${output.src.dir}" file="${system.config.security.dir}/${csm.ehcache.file}"/>
 		<copy tofile="${output.src.dir}/${csm.security.config.file}" file="${system.config.security.dir}/${csm.security.config.original.file}"/>
@@ -650,6 +657,7 @@
 			<fileset dir="${build.conf.system.web.dir}">
 				<include name="**/*"/>
 				<exclude name="**/web.xml"/>
+				<exclude name="${server-exclude-classes-list}"/>
 			</fileset>
 			<fileset dir="${system.dir}\${system.web.dir}">
 				<include name="**/*"/>
