HibernateValidator implementation changes
SVN-Revision: 2088

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -21,6 +21,10 @@
 #		1) Web service name in the Web Services deployment descriptor (WSDD). 
 #		2) Web service URL, which uses the Web service name as a suffix 
 #          (i.e., ${SERVER_URL}/services/${WEBSERVICE_NAME})
+#       3) Locate the UML Project in caDSR when adding Hibernate Validator
+#          annotations in generated domain objects.  Use format:
+#		   gme://<<Classification Scheme (UML Project ShortName)>>.<<Context>>/
+#          <<Classification Scheme Version>>/<<<Classification Scheme Item> (Optional)>>
 #
 ##################################################################################
 PROJECT_NAME=example
