--- a/SDK4/local.properties
+++ b/SDK4/local.properties
@@ -17,5 +17,5 @@ DB_DIALECT=org.hibernate.dialect.MySQLDialect
 #DB_DRIVER=org.hsqldb.jdbcDriver
 #HBM2DDL_TYPE=create-drop
 
-CADSR_CONNECTION_URL=http://cbvapp-d1008.nci.nih.gov:19080/caDSR
+CADSR_CONNECTION_URL=http://cadsrapi.nci.nih.gov/cadsrapi40
 
