--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -74,6 +74,7 @@ xml.comment.end=-->
 extension.api.interface=gov.nih.nci.system.applicationservice.WritableApplicationService
 extension.api.impl=gov.nih.nci.system.applicationservice.impl.WritableApplicationServiceImpl
 extension.dao.impl=gov.nih.nci.system.dao.orm.WritableORMDAOImpl
+extension.api.security=${extension.api.interface}.*=DUMMYVALUE
 
 sdk.api.interface=gov.nih.nci.system.applicationservice.ApplicationService
 sdk.api.impl=gov.nih.nci.system.applicationservice.impl.ApplicationServiceImpl
