--- a/SDK4/conf/codegen/log4j.properties
+++ b/SDK4/conf/codegen/log4j.properties
@@ -1,22 +1,16 @@
-log4j.rootLogger=ERROR,stdout
-
+log4j.rootLogger=debug,stdout
 
 ### direct messages to file hibernate.log ###
-
 log4j.appender.clientLog=org.apache.log4j.FileAppender
 log4j.appender.clientLog.File=./log/client.log
 log4j.appender.clientLog.layout=org.apache.log4j.PatternLayout
 log4j.appender.clientLog.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
-
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
-
-
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
-
 #log4j.rootLogger=warn, stdout
 #log4j.rootLogger=warn, file
 #log4j.logger.org.hibernate=info
