Added NAMESPACE_PREFIX property for testing of Hibernate Validator
SVN-Revision: 2116

--- a/SDK4/local.properties
+++ b/SDK4/local.properties
@@ -17,5 +17,6 @@ DB_DIALECT=org.hibernate.dialect.MySQLDialect
 #DB_DRIVER=org.hsqldb.jdbcDriver
 #HBM2DDL_TYPE=create-drop
 
+NAMESPACE_PREFIX=gme://SDK Example Project.caCORE/1/
 CADSR_CONNECTION_URL=http://cadsrapi.nci.nih.gov/cadsrapi40
 
