--- a/SDK4/local.properties
+++ b/SDK4/local.properties
@@ -18,5 +18,4 @@ DB_DIALECT=org.hibernate.dialect.MySQLDialect
 #HBM2DDL_TYPE=create-drop
 
 NAMESPACE_PREFIX=gme://SDK Example Project.caCORE/1/
-CADSR_CONNECTION_URL=http://cadsrapi.nci.nih.gov/cadsrapi40
-
+CADSR_CONNECTION_URL=http://cadsrapi-dev.nci.nih.gov/cadsrapi40
